--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,6 +62,14 @@ h1, h2 {
     height: 600px;
     width: 100%;
     overflow: hidden;
+
+    position: relative;
+}
+
+/* need to specify the h2 to override the above setting for h2 */
+
+#cover-text, #cover-text h2{
+    color: #fff;
 }
 
 #hero-image {
@@ -85,4 +93,24 @@ h1, h2 {
     to{
         transform: scale(1.1);
     }
+}
+
+#cover-text {
+    font-size: 130%;
+    font-family: oswald, sans-serif;
+    text-transform: uppercase;
+    text-transform: 4px;
+
+    width: 300px;
+    height: 200px;
+
+    padding-top: 40px;
+    padding-left: 10px;
+    
+    background-color: rgba(241, 109, 107, .7);
+
+    bottom: 30px;
+    right: 150px;
+
+    position: absolute;
 }
