--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -140,12 +140,11 @@ h1, h2 {
 #center-about {
     width: 33%;
     margin: 0 auto;
-    background-color: red;
 }
 
 hr {
     border-top: 1px solid #3a3a3a;
-    width: 100%;
+    width: 110%;
     margin: 5px;
 }
 
@@ -171,4 +170,28 @@ hr {
 
 .right-about-heading p {
     text-align: right;
+}
+
+#welcome {
+    text-align: center;
+    margin: 20px 0;
+    font-size: 280%;
+}
+
+#circle-container {
+    width: 300px;
+    height: 300px;
+    padding: 30px;
+    border-style: solid;
+    border-color: #ccc;
+    border-width: 1px;
+    border-radius: 50%;
+    margin: 0 auto;
+}
+
+#circle-cover-bg {
+    background: url("../images/ethos-center-image.jpeg") no-repeat center center;
+    height: 100%;
+    border-radius: 50%;
+
 }
