--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,16 +18,16 @@ h1, h2 {
     font-family: Oswald, sans-serif;
     text-transform: uppercase;
     letter-spacing: 4px;
-    color: #252525
+    color: #252525;
 }
 
 #logo {
     float: left;
     font-size: 280%;
-    margin-left: 30px
+    margin-left: 30px;
 }
 
-/* Navigation links */
+/* navigation links */
 
 #menu {
     font-size: 110%;
@@ -57,7 +57,7 @@ h1, h2 {
     border-bottom: 1px solid #3a3a3a;
 }
 
-/* hero image*/
+/* hero image and cover text */
 
 #hero-outer {
     height: 600px;
@@ -67,9 +67,7 @@ h1, h2 {
     position: relative;
 }
 
-/* need to specify the h2 to override the above setting for h2 */
-
-#cover-text, #cover-text h2{
+#cover-text, #cover-text h2 {
     color: #fff;
 }
 
@@ -84,8 +82,6 @@ h1, h2 {
     animation-fill-mode: forwards;
 }
 
-
-
 /* creates the level of zoom for hero image */
 @keyframes hero-zoom {
     from{
@@ -98,16 +94,16 @@ h1, h2 {
 
 #cover-text {
     font-size: 130%;
-    font-family: oswald, sans-serif;
+    font-family: Oswald, sans-serif;
     text-transform: uppercase;
-    text-transform: 4px;
+    letter-spacing: 4px;
 
     width: 300px;
     height: 200px;
 
     padding-top: 40px;
     padding-left: 10px;
-    
+
     background-color: rgba(241, 109, 107, .7);
 
     bottom: 30px;
@@ -116,19 +112,16 @@ h1, h2 {
     position: absolute;
 }
 
-/* club ethos*/
+/* club ethos */
 
 #club-ethos {
-    height: 600px
-
-
+    height: 600px;
 }
 
 #left-about {
     padding-top: 30px;
     width: 33%;
     float: left;
-    
 }
 
 #right-about {
@@ -144,8 +137,8 @@ h1, h2 {
 
 hr {
     border-top: 1px solid #3a3a3a;
-    width: 110%;
-    margin: 5px;
+    width: 100%;
+    margin: 5px 0;
 }
 
 .left-about-heading {
@@ -190,16 +183,15 @@ hr {
 }
 
 #circle-cover-bg {
-    background: url("../images/ethos-center-image.jpeg") no-repeat center center;
+    background: url('../images/ethos-center-image.jpg') no-repeat center center;
     height: 100%;
     border-radius: 50%;
-
 }
 
 /* event times */
 
 #times {
-    background-image: url('../images/dublin-city.webp');
+    background-image: url('../images/times-background.webp');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -242,4 +234,17 @@ footer {
     margin: 1%;
     padding: 5%;
     color: #3a3a3a;
+}
+
+/* gallery */
+
+#photos {
+    clear: both;
+    line-height: 0;
+    column-count: 4;
+    column-gap: 0;
+}
+
+#photos > img {
+    width: 100%;
 }
