--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -252,7 +252,6 @@ footer {
 /* Media queries */
 
 /* For larger to medium screens size from 1200px wide and down */
-
 @media screen and (max-width: 1200px) {
     #club-ethos {
         width: 65%;
@@ -278,34 +277,37 @@ footer {
         padding: 0;
     }
 
+    #times > div {
+        width: 100%;
+        clear: both;
+        height: 150px;
+        padding: 0;
+    }
+
     hr {
         display: none;
     }
-
 }
 
-/* For medium screens sizes from 950px wide and down */
-
+/* For medium screen sizes from 950px wide and down */
 @media screen and (max-width: 950px) {
-   
+
     #menu {
         clear: left;
         float: left;
         margin-left: 30px;
         margin-bottom: 20px;
-        line-height: 25px; 
+        line-height: 25px;
     }
 
     #cover-text {
         left: 0;
-
     }
 
     #club-ethos {
         width: 90%;
         height: 1200px;
         margin: 0 auto;
-
     }
 
     .left-about-heading, .right-about-heading {
@@ -315,7 +317,6 @@ footer {
     .left-about-heading h2, .right-about-heading h2 {
         width: 100%;
         text-align: center;
-
     }
 
     .left-about-heading p, .right-about-heading p {
@@ -323,4 +324,14 @@ footer {
         padding: 0 20px;
     }
 
+    #photos {
+        column-count: 3;
+    }
+}
+
+/* For small screen sizes 800px and down */
+@media screen and (max-width: 800px) {
+    #photos {
+        column-count: 2;
+    }
 }
